--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,9 @@
 [submodule "ftplugin/python/mccabe"]
 	path = ftplugin/python/mccabe
 	url = https://github.com/flintwork/mccabe.git
+[submodule "ftplugin/python/autopep8"]
+	path = ftplugin/python/autopep8
+	url = https://github.com/hhatto/autopep8.git
+[submodule "ftplugin/python/pep8"]
+	path = ftplugin/python/pep8
+	url = https://github.com/jcrocholl/pep8.git
