--- a/.gitmodules
+++ b/.gitmodules
@@ -7,3 +7,6 @@
 [submodule "ftplugin/python/pep8"]
 	path = ftplugin/python/pep8
 	url = https://github.com/jcrocholl/pep8.git
+[submodule "ftplugin/python/pyflakes"]
+	path = ftplugin/python/pyflakes
+	url = https://github.com/pyflakes/pyflakes.git
